unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__IsAllocated__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsAllocated__c</fullName>
    <description>Boolean value calculating whether the Project Task has been fully allocated. It is used by other formula fields for better readability. This is a system field and should never be visible.</description>
    <formula>/*When the Length measurement unit is Calendar Allocation and the task has been fully allocated return true*/
ISPICKVAL(project_cloud__Units__c, &#39;Calendar Allocation&#39;) &amp;&amp; project_cloud__Allocated_Hours__c &gt;= project_cloud__Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Calendar Allocating Completed</label>
    <type>Checkbox</type>
</CustomField>