unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__IsAutonomous__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsAutonomous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Parents End Dates</label>
    <type>Checkbox</type>
</CustomField>