unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__IsComplete__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value that determines whether a task has been completed or not</description>
    <inlineHelpText>Indicates sign off by the Project Manager that the Project Task is complete</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>