unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__IsOn_Hold__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsOn_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value that determines whether a task is on hold</description>
    <inlineHelpText>Indicates if the Project Task is on hold</inlineHelpText>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>