unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__IsWorking_Monday__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsWorking_Monday__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean value indicating if Monday is a day this task will be worked on. This is a system field and should never be modified.</description>
    <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
    <label>Working Day Monday</label>
    <type>Checkbox</type>
</CustomField>