unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Minimum_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Minimum_End__c</fullName>
    <description>Override the end date of Project Task using this field. If this date is before the calculated end the calculated end will still be used</description>
    <inlineHelpText>The earliest possible date that this Project Task can finish. The Project Task can still finish after this date but not before. (You might select a value here where you want task to span a week even though there is only 1 days work involved).</inlineHelpText>
    <label>Cannot End Before</label>
    <type>Date</type>
</CustomField>