unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Non_Working__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Non_Working__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is a system field that should never be updated by the user.
It is a calculation of the number of days that a task is not being worked on based on the start date and the length of the task.
If a Cannot End Before date has been specified, the Non Working days will be 0 unless the Cannot End Before date is the day before a Non Working day</description>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Non Working Days Total</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>