unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Non_Working_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Non_Working_End__c</fullName>
    <defaultValue>0</defaultValue>
    <description>When the Project Task finishes at the end of the day (hours offset 0), a day before a Non Working day, this value is the number of non working days before a child task can start. This is a system field and should never be visible.</description>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Non Working End</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>