unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Parents_Complete__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parents_Complete__c</fullName>
    <formula>project_cloud__Parents_Incomplete__c &lt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When checked, indicates that all dependent predecessor tasks are complete.</inlineHelpText>
    <label>All Parents Complete</label>
    <type>Checkbox</type>
</CustomField>