unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Parents_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parents_End__c</fullName>
    <description>A rollup of the end dates on all the parent Project Tasks. Rollups are not allowed on cross object formulas. So the Parent_End value on the Dependency is a date field not a formula making this possible.</description>
    <inlineHelpText>The end date of the Project Task that acts as the limiting predecessor to this Project Task</inlineHelpText>
    <label>Parents End Date</label>
    <summarizedField>project_cloud__Project_Task_Dependency__c.project_cloud__Parent_End__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Task_Dependency__c.project_cloud__Child__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>