unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Parents_Hours_Offset__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parents_Hours_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is a system field that should never be updated by the user. It is the largest offset value of all Parent Project Tasks that end on the Parents End Date (Most of the time this should only be one Parent). This value is used to determine how many working hours remain in the first day that this task can worked on</description>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Parents Hours Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>