unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Parents_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parents_Incomplete__c</fullName>
    <inlineHelpText>The total number of the predecessor tasks with a status not equal to &quot;Complete&quot;.</inlineHelpText>
    <label>Total Parents Incomplete</label>
    <summaryFilterItems>
        <field>project_cloud__Project_Task_Dependency__c.project_cloud__Parent_Complete__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Project_Task_Dependency__c.project_cloud__Child__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>