unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <description>Field to help with lookup dialogs</description>
    <formula>project_cloud__Project_Phase__r.project_cloud__Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Project that the Task belongs to.</inlineHelpText>
    <label>Project</label>
    <type>Text</type>
</CustomField>