unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Phase__c</fullName>
    <description>The Project Phase that the Project Task belongs to</description>
    <inlineHelpText>The Project Phase that the Task belongs to.</inlineHelpText>
    <label>Project Phase</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>