unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Project_Sub_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Sub_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Project Sub-Phase that the Project Task belongs to</description>
    <inlineHelpText>The Project Sub-Phase that the Task belongs to.</inlineHelpText>
    <label>Project Sub-Phase</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>project_cloud__Project_Sub_Phase__c.project_cloud__Project_Phase__c</field>
            <operation>equals</operation>
            <valueField>$Source.project_cloud__Project_Phase__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Project_Sub_Phase__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>