unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Projected_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Projected_Hours__c</fullName>
    <description>The number of projected hours this Project Task will take to complete based on inputed time entries and the current Project Task completion percentage</description>
    <formula>IF(project_cloud__Worked_Hours__c = 0 || project_cloud__Completed_Percent__c = 0,
	project_cloud__Estimated_Hours__c,
	project_cloud__Worked_Hours__c / project_cloud__Completed_Percent__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of projected hours this Project Task will take to complete based on inputed time entries and the current Project Task completion percentage</inlineHelpText>
    <label>Projected Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>