unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Requirement__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Requirement that this Project Task is associated with</inlineHelpText>
    <label>Requirement</label>
    <referenceTo>project_cloud__Requirement__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>