unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Resource_Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resource_Status__c</fullName>
    <description>Image formula field for displaying the resource status  (how much of a project task has been resourced)</description>
    <formula>HYPERLINK(
	project_cloud__Resource_Status_Link__c,
	project_cloud__Resource_Status_Image__c,
	&#39;_top&#39;
)</formula>
    <inlineHelpText>Image formula field for displaying the resource status  (how much of a project task has been resourced)</inlineHelpText>
    <label>Manage Resources</label>
    <type>Text</type>
</CustomField>