unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Resource_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resource_Status_Image__c</fullName>
    <description>Image formula field for displaying the resource status  (how much of a project task has been resourced)</description>
    <formula>IMAGE(
	&#39;/resource/&#39; + $Setup.project_cloud__Configuration_Options__c.project_cloud__Namespace__c + IF(ISBLANK($Setup.project_cloud__Configuration_Options__c.project_cloud__Namespace__c), &#39;&#39;, &#39;__&#39;) + &#39;resourcing_resources_zip/icons/resourced-transparent/&#39; &amp;

	/*Fully allocated because the phase or project has been marked fully subscribed*/
	IF(project_cloud__Project_Phase__r.project_cloud__Subscribed__c || project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__Subscribed__c, &#39;all&#39;,

	/*Fully allocated because the task has been marked fully subscribed*/
	IF(project_cloud__Subscribed__c, &#39;all&#39;,

	/*Fully allocated because the Calendar Allocations have been fully allocated*/
	IF(project_cloud__Allocated_Hours__c &gt;= project_cloud__Estimated_Hours__c, &#39;all&#39;,

	/*Partly allocated because some allocations have been created but not enough to cover the estimated hours*/
	IF(project_cloud__Allocated_Hours__c &gt; 0 &amp;&amp; project_cloud__Allocated_Hours__c &lt; project_cloud__Estimated_Hours__c, &#39;part&#39;,

	/*Partly allocated because some subscriptions have been created, but task is not fully subscribed*/
	IF(project_cloud__Subscriptions__c &gt; 0, &#39;part&#39;,

	/*Default value is not resourced*/
	&#39;none&#39;

	)))))

	&amp; &#39;.png&#39;,
	/*Alt text*/
	&#39;Resource Status&#39;,
	/*Image dimensions*/
	16, 16
)</formula>
    <label>Resource Status Image</label>
    <type>Text</type>
</CustomField>