unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Resource_Status_Link__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resource_Status_Link__c</fullName>
    <description>Formula that constructs just the url for the Manage Resources page. This is used but the Resource Status field and the Manage Resources button</description>
    <formula>&#39;/apex/&#39; + $Setup.project_cloud__Configuration_Options__c.project_cloud__Namespace__c + IF(ISBLANK($Setup.project_cloud__Configuration_Options__c.project_cloud__Namespace__c), &#39;&#39;, &#39;__&#39;) + &#39;project_task_&#39; + IF(project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__IsOnly_Subscriptions__c, &#39;subscriptions&#39;, &#39;resources&#39;) + &#39;?id=&#39; + Id</formula>
    <label>Resource Status URL</label>
    <type>Text</type>
</CustomField>