unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Self_Assign__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Self_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the task can be assigned to users by the users themselves.</inlineHelpText>
    <label>Self Assignable</label>
    <type>Checkbox</type>
</CustomField>