unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Show_External__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Show_External__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, the task is displayed in the External Project View.</inlineHelpText>
    <label>Show in External View</label>
    <type>Checkbox</type>
</CustomField>