unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Sorting_Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sorting_Hash__c</fullName>
    <description>This field is used for sorting Project Tasks in the CCProjex Enterprise default order of Start, End, Name</description>
    <formula>BLANKVALUE(TEXT(project_cloud__Start__c), &#39;9999-99-99&#39;) &amp; TEXT(project_cloud__Parents_Hours_Offset__c) &amp; BLANKVALUE(TEXT(project_cloud__End__c), &#39;9999-99-99&#39;) &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field can be used to sort Project Tasks using the CCProjex Enterprise default order</inlineHelpText>
    <label>Sorting Column</label>
    <type>Text</type>
</CustomField>