unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start__c</fullName>
    <description>This is the calculated start date for the task. It is the dependent start date if that exists otherwise it is the autonomous start date (The date the creator of the task wants to get started)</description>
    <formula>/*If the task is complete and the completed date is before the calculated start date use the completed date as the start date to prevent negative length tasks*/
IF(project_cloud__Completed_Date__c &lt; project_cloud__Autonomous_Start__c || project_cloud__Completed_Date__c &lt; BLANKVALUE(project_cloud__Start_Driving_Date__c, project_cloud__Parents_End__c + IF(project_cloud__Parents_Hours_Offset__c = 0, 1, 0)),
	project_cloud__Completed_Date__c,
/*ELSE*/
	IF(ISBLANK(BLANKVALUE(project_cloud__Start_Driving_Date__c, project_cloud__Parents_End__c)) || project_cloud__Autonomous_Start__c &gt; BLANKVALUE(project_cloud__Start_Driving_Date__c, project_cloud__Parents_End__c) || project_cloud__IsAutonomous__c,
		/*If there is no Parents End date the task has not parents so use the autonomous start date*/
		project_cloud__Autonomous_Start__c,
	/*ELSE*/
		/*Otherwise use the parents end date. Use the day after the parents end date if the parent task finishes at the end of the day*/
		BLANKVALUE(project_cloud__Start_Driving_Date__c, project_cloud__Parents_End__c + IF(project_cloud__Parents_Hours_Offset__c = 0, 1, 0))
	)
)</formula>
    <inlineHelpText>The calculated start date of the Project Task, derived from the Cannot Start Before date, or if this is a dependent task then the Project Task will start after the all the parents have ended.</inlineHelpText>
    <label>Calculated Start Date</label>
    <type>Date</type>
</CustomField>