unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Start_Driving_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start_Driving_Date__c</fullName>
    <description>A rollup of the start drivers on all the parent Project Tasks. Rollups are not allowed on cross object formulas. So the Child Start Driver value on the Dependency is a date field not a formula making this possible.</description>
    <inlineHelpText>The earliest the task can start while still satisfying all dependencies.</inlineHelpText>
    <label>Start Driving Date</label>
    <summarizedField>project_cloud__Project_Task_Dependency__c.project_cloud__Child_Start_Driving_Date__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Task_Dependency__c.project_cloud__Child__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>