unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Sub_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sub_Task_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The number of Project Sub Tasks this task has.</inlineHelpText>
    <label>Sub Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>