unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Subscribed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this indicates the Project Task has been fully subscribed. i.e there are no more subscriptions that need to be created</description>
    <inlineHelpText>When checked, this indicates that you have fully subscribed this project task and have no need to make further subscriptions or calendar allocations to the task.</inlineHelpText>
    <label>Fully Subscribed</label>
    <type>Checkbox</type>
</CustomField>