unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Subscriptions__c</fullName>
    <description>A Count of the number of subscriptions on the Project Task</description>
    <label>Subscriptions</label>
    <summaryFilterItems>
        <field>project_cloud__Total_Allocation__c.project_cloud__Subscribed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Total_Allocation__c.project_cloud__Project_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>