unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Task_Number__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Task_Number__c</fullName>
    <description>Auto Number field for uniquely identifying Project Tasks. This value is also appended to the Project Task Name for searching.</description>
    <displayFormat>T-{00000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Auto number for the Project Task that is appending to the Project Task name to make it unique</inlineHelpText>
    <label>Project Task Number</label>
    <type>AutoNumber</type>
</CustomField>