unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Units__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Units__c</fullName>
    <description>The unit type of the Project Task.
The value of this field is copied from the value of the Project when the task is created (by the ProjectTaskConfiguration trigger) and once set is read only. This is a system field and should never be visible.</description>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Project Task Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duration</fullName>
                <default>true</default>
                <label>Duration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>