unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>L/U Relationship to the Work Type of this Project Task</description>
    <inlineHelpText>The primary &#39;Work Type&#39; that this task is related to. This value is used for the base capability in resource search and allocation.</inlineHelpText>
    <label>Work Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>project_cloud__Work_Type__c.project_cloud__Parent__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
            <operation>notEqual</operation>
            <value>Location,Expertise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>