unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Worked_Hours__c</fullName>
    <description>This represents the total number of hours completed against the project task using Work records where Record Type = Time Entry.  This field is calculated by the trigger Work Configuration.
All non-admin users should have READ ONLY access to this field.</description>
    <inlineHelpText>Shows a rollup summary of hours entered to records under the task. This field should not be manually editable.</inlineHelpText>
    <label>Entered Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>