unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Working_Total__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Working_Total__c</fullName>
    <description>Total number of working days on a given project task.  This is a system field used for resourcing calculations and should not be visible to the user.</description>
    <inlineHelpText>Total Number of Working Days on this Task</inlineHelpText>
    <label>Working Days Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>