unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/PV_Hours__c.field-meta.xml
<CustomField>
    <fullName>PV_Hours__c</fullName>
    <label>PV Hours</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>