unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Quality_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Quality_Task_Type__c</fullName>
    <label>Quality Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality Check (Inspection and audit)</fullName>
            </value>
            <value>
                <fullName>Remediation Request (from QC)</fullName>
            </value>
            <value>
                <fullName>Remediation Request (from Customer rejection)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>