unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Rejection_Comments_from_customer__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments_from_customer__c</fullName>
    <label>Rejection Comments from customer</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>